Fix spacing issues

--- a/index.css
+++ b/index.css
@@ -66,16 +66,6 @@ h2 {
   background-image: url("images/happy.gif");
 }
 
-.gift2-img {
-  background-image: url("images/gift-cover.jpg");
-  background-size: cover;
-  margin: 0 auto;
-  width: 400px;
-  height: 400px;
-  border: 6px solid white;
-  border-radius: 10px;
-}
-
 #gift-img-hot:hover {
   background-image: url("images/hot.gif");
 }
@@ -104,4 +94,17 @@ h2 {
 
 a {
   color: white;
+}
+
+@media only screen and (max-width: 768px) {
+  .gift-img {
+    background-image: url("images/gift-cover.jpg");
+    background-size: cover;
+    width: 300px;
+    margin: auto;
+  }
+
+  #footer {
+    width: 320px;
+  }
 }
